use user identifier from token, add returns to queries, adjust types
